# NdkImportedLibs

./: install_debug_signed_apk.sh  install_debug_unsigned_apk.sh  install_release_signed_apk.sh  settings.gradle
APKs/: app-debug-unsigned.apk
app/: build.gradle
app/src/androidTest/java/general/code/jnilibsprebuilt/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/FFMPEG-ANDROID/: CMakeLists.txt
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
mobile-ffmpeg/src/fontconfig/: Makefile.in  aclocal.m4  configure
mobile-ffmpeg/src/fontconfig/conf.d/: Makefile.in  README
mobile-ffmpeg/src/fontconfig/doc/: Makefile.in
mobile-ffmpeg/src/fontconfig/fc-cache/: Makefile.in
mobile-ffmpeg/src/fontconfig/fc-case/: Makefile.in
mobile-ffmpeg/src/fontconfig/fc-cat/: Makefile.in
mobile-ffmpeg/src/fontconfig/fc-conflist/: Makefile.in
mobile-ffmpeg/src/fontconfig/fc-lang/: Makefile.in
mobile-ffmpeg/src/fontconfig/fc-list/: Makefile.in
mobile-ffmpeg/src/fontconfig/fc-match/: Makefile.in
mobile-ffmpeg/src/fontconfig/fc-pattern/: Makefile.in
mobile-ffmpeg/src/fontconfig/fc-query/: Makefile.in
mobile-ffmpeg/src/fontconfig/fc-scan/: Makefile.in
mobile-ffmpeg/src/fontconfig/fc-validate/: Makefile.in
mobile-ffmpeg/src/fontconfig/fontconfig/: Makefile.in
mobile-ffmpeg/src/fontconfig/its/: Makefile.in
mobile-ffmpeg/src/fontconfig/src/: Makefile.in
mobile-ffmpeg/src/fontconfig/test/: Makefile.in  test-d1f48f11  test-issue107  test-issue110
mobile-ffmpeg/src/gmp/: gmp.pc  gmpxx.pc
mobile-ffmpeg/src/libvorbis/: Makefile.in  configure
mobile-ffmpeg/src/libvorbis/doc/: Makefile.in
mobile-ffmpeg/src/libvorbis/doc/libvorbis/: Makefile.in
mobile-ffmpeg/src/libvorbis/doc/vorbisenc/: Makefile.in
mobile-ffmpeg/src/libvorbis/doc/vorbisfile/: Makefile.in
mobile-ffmpeg/src/libvorbis/examples/: Makefile.in
mobile-ffmpeg/src/libvorbis/include/: Makefile.in
mobile-ffmpeg/src/libvorbis/include/vorbis/: Makefile.in
mobile-ffmpeg/src/libvorbis/lib/: Makefile.in
mobile-ffmpeg/src/libvorbis/lib/books/: Makefile.in
mobile-ffmpeg/src/libvorbis/lib/books/coupled/: Makefile.in
mobile-ffmpeg/src/libvorbis/lib/books/floor/: Makefile.in
mobile-ffmpeg/src/libvorbis/lib/books/uncoupled/: Makefile.in
mobile-ffmpeg/src/libvorbis/lib/modes/: Makefile.in
mobile-ffmpeg/src/libvorbis/m4/: Makefile.in
mobile-ffmpeg/src/libvorbis/test/: Makefile.in
mobile-ffmpeg/src/libvorbis/vq/: Makefile.in
mobile-ffmpeg/src/libwebp/: Makefile  Makefile.in  config.status  configure
mobile-ffmpeg/src/libwebp/autom4te.cache/: requests  traces.1
mobile-ffmpeg/src/libwebp/examples/: Makefile  Makefile.in  cwebp  libexample_util.la
mobile-ffmpeg/src/libwebp/extras/: Makefile  Makefile.in
mobile-ffmpeg/src/libwebp/imageio/: Makefile  Makefile.in  libimagedec.la
mobile-ffmpeg/src/libwebp/man/: Makefile  Makefile.in
mobile-ffmpeg/src/libwebp/src/: Makefile  Makefile.in  libwebp.la  libwebp.pc  libwebpdecoder.pc
mobile-ffmpeg/src/libwebp/src/.libs/: libwebp.lai
mobile-ffmpeg/src/libwebp/src/dec/: Makefile
mobile-ffmpeg/src/libwebp/src/demux/: Makefile  libwebpdemux.la  libwebpdemux.pc
mobile-ffmpeg/src/libwebp/src/demux/.libs/: libwebpdemux.lai
mobile-ffmpeg/src/libwebp/src/dsp/: Makefile
mobile-ffmpeg/src/libwebp/src/enc/: Makefile
mobile-ffmpeg/src/libwebp/src/mux/: Makefile  libwebpmux.la  libwebpmux.pc
mobile-ffmpeg/src/libwebp/src/mux/.libs/: libwebpmux.lai
mobile-ffmpeg/src/libwebp/src/utils/: Makefile
(+2 files in other folders)
